--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body {
   }
 
   .game-score{
+    position: absolute;
   background-color: rgba(30,30,30,0.5);
   color: white;
-  text-align: right;
-  padding: 10px;
+  right: 0;
   }
 }
 .game-section {
@@ -21,6 +21,11 @@ body {
 
 .hidden {
   display: none;
+}
+.game-area {
+  height: 100vh;
+  overflow: hidden;
+
 }
 
 .game-over,
